--- a/moviesApp/src/main/res/values/strings.xml
+++ b/moviesApp/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="hello_list_fragment">Error loading data</string>
     <string name="hello_detail_fragment">Hello detail fragment</string>
     <string name="movie_name">Movie Name</string>
+    <string name="original_language">Original Language</string>
 </resources>
